
version 1.2.44rc02 [June 22, 2010]
  Stop memory leak when reading a malformed sCAL chunk.

version 1.2.44rc03 [June 23, 2010]
  Revised pngpread.c patch of beta05 to avoid an endless loop.

version 1.2.44 [June 26, 2010]
  Updated some of the "last changed" dates.

version 1.2.45beta01 [June 7, 2011]
  Fixed uninitialized memory read in png_format_buffer() (Bug
    report by Frank Busse, related to CVE-2004-0421).
  Pass "" instead of '\0' to png_default_error() in png_err().  This mistake
    was introduced in libpng-1.2.20beta01.
  Check for up->location !PNG_AFTER_IDAT when writing unknown chunks
    before IDAT.
  Ported bugfix in pngrtran.c from 1.5.3: when expanding a paletted image,
    always expand to RGBA if transparency is present.

version 1.2.45beta02 [June 8, 2011]
  Check for integer overflow in png_set_rgb_to_gray().

version 1.2.45beta03 [June 19, 2011]
  Check for sCAL chunk too short.

version 1.2.45rc01 and 1.0.55rc01 [June 30, 2011]
  Updated "last changed" dates and copyright year.

version 1.2.45 and 1.0.55 [July 7, 2011]
  No changes.

version 1.2.46rc01 and 1.0.56rc01 [July 8, 2011]
  Reverted changes to Makefile.am and Makefile.in to libpng-1.2.44 versions.

version 1.2.46rc02 and 1.0.56rc02 [July 8, 2011]
  Added CMakeLists.txt, projects/xcode, and pnggccrd.c to EXTRA_DIST in
    Makefile.am and Makefile.in

version 1.2.46 and 1.0.56 [July 9, 2011]
  Udated copyright year to 2011.

version 1.2.47beta01 [February 17, 2012]
  Updated contrib/pngminus/makefile.std (Samuli Souminen)

version 1.0.57rc01 and 1.2.47rc01 [February 17, 2012]
  Fixed CVE-2011-3026 buffer overrun bug.

version 1.0.57 and 1.2.47 [February 18, 2012]
  No changes.

version 1.2.48beta01 [February 20, 2012]

Send comments/corrections/commendations to png-mng-implement at lists.sf.net
(subscription required; visit
https://lists.sourceforge.net/lists/listinfo/png-mng-implement
to subscribe)
or to glennrp at users.sourceforge.net

Glenn R-P
#endif