@@ -43,6 +43,7 @@ Other information:
 Changes since the last public release (1.2.46):
 
 version 1.2.48beta01 [February 20, 2012]
+  Removed two useless #ifdef directives from pngread.c and one from pngrutil.c
 
 (subscription required; visit
 https://lists.sourceforge.net/lists/listinfo/png-mng-implement
