@@ -2746,6 +2746,7 @@ version 1.0.57 and 1.2.47 [February 18, 2012]
   No changes.
 
 version 1.2.48beta01 [February 20, 2012]
+  Removed two useless #ifdef directives from pngread.c and one from pngrutil.c
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
